# jaybird

./: .clang-tidy  ReadMe.md  meson.build  subprojects.txt
include/jaybird/: base.hpp  io.hpp  jaybird.hpp  serialization.hpp
include/jaybird/base/: defs.hpp  type-info.hpp  uni-variant.hpp
include/jaybird/io/: io.hpp
include/jaybird/serialization/: serialization.hpp
subprojects/: .gitignore  nlohmann-json.wrap  update_tlaxcaltin.py
test/: deserialize.cpp  meson.build  serialization.cpp
